<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/ConstraintLayout"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".CadastroConta_Activity"
    tools:layout_editor_absoluteY="81dp" >

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:orientation="vertical"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent">

        <EditText
            android:id="@+id/edtID"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:ems="10"
            android:hint="ID da conta"
            android:inputType="textPersonName"
            android:text="@string/edtID" />

        <EditText
            android:id="@+id/edtTipo"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:ems="10"
            android:hint="Tipo de conta"
            android:inputType="textPersonName"
            android:text="@string/edtTipo" />

        <EditText
            android:id="@+id/edtNome"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:ems="10"
            android:hint="Nome da conta"
            android:inputType="textPersonName"
            android:text="@string/edtNome" />

        <EditText
            android:id="@+id/edtData"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:ems="10"
            android:hint="Data da conta"
            android:inputType="textPersonName"
            android:text="@string/edtData" />

        <EditText
            android:id="@+id/edtValor"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:ems="10"
            android:hint="Valor da conta"
            android:inputType="textPersonName"
            android:text="@string/edtValor" />

        <Button
            android:id="@+id/btnCadastrar"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/btnCadastrar" />

        <Button
            android:id="@+id/btnAlterar"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/btnAlterar" />
    </LinearLayout>
</androidx.constraintlayout.widget.ConstraintLayout>